# quizquiz

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
src/: __init__.py  config.py  main.py
src/ai/: __init__.py  claude_code.py
src/analysis/: __init__.py  github.py  local_repo.py
src/bot/: __init__.py  mattermost.py  webhook.py
src/db/: database.py  models.py  repository.py
src/quiz/: __init__.py  generator.py  session.py
src/scheduler/: __init__.py  jobs.py
